<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/delightful_header_background" >

        <TextView
            android:id="@+id/alarm_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name_italic"
            android:textColor="#FFF"
            android:textSize="100sp" />

        <Button
            android:id="@+id/alarm_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/mensch"
            android:text="@string/main_menu_logout"
            android:textColor="#FFF" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/alarm_logout_button"
            android:background="@android:color/transparent" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <View
            android:id="@+id/alarm_fakeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/alarm_fakeView"
            android:layout_marginTop="@dimen/control_seekbar_padding_top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_apartment_header"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/alarm_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_apartment_subheader"
                android:textSize="18sp"
                android:textStyle="italic" />

            <RelativeLayout
                android:id="@+id/alarm_layout_background"
                android:layout_width="fill_parent"
                android:layout_height="402dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_background_border"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/alarm_room_layout_background"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/alarm_room_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/control_seekbar_padding_top" >
                    </ImageView>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutButtonBarLeftStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/control_seekbar_padding_top"
                    android:layout_marginRight="@dimen/control_seekbar_padding_top"
                    android:text="@string/control_scenario"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <Spinner
                    android:id="@+id/alarm_spinner_theme"
                    style="@style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/delightful_spinner"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/alarm_fakeView"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/control_seekbar_padding_top"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/alarm_textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/alarm_unit_header"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/alarm_textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/alarm_unit_subheader"
                android:textSize="18sp"
                android:textStyle="italic" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="@dimen/control_seekbar_padding_top"
                android:background="@android:color/transparent"
                android:paddingTop="@dimen/control_seekbar_padding_top" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View
                    android:id="@+id/view1"
                    android:layout_width="fill_parent"
                    android:layout_height="3dip"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/timeView"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="25dp"
                    android:background="#FF666666" />

                <Switch
                    android:id="@+id/switch_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="55dp"
                    android:layout_toRightOf="@+id/timePicker"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

                <TextView
                    android:id="@+id/timeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="25dp"
                    android:text="00:00"
                    android:textSize="60sp" />

                <LinearLayout
                    android:id="@+id/fake_center_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal" >
                </LinearLayout>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="45dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

                <Button
                    android:id="@+id/alarm_button_settings"
                    android:layout_width="@dimen/control_button_playlist_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timePicker"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_toLeftOf="@+id/fake_center_view"
                    android:background="@drawable/delightful_login_button_oval"
                    android:text="@string/alarm_settings"
                    android:textColor="#FFF"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/alarm_button_start"
                    android:layout_width="@dimen/control_button_playlist_width"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/alarm_button_settings"
                    android:layout_alignBottom="@+id/alarm_button_settings"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/fake_center_view"
                    android:background="@drawable/delightful_login_button_oval"
                    android:text="@string/alarm_start"
                    android:textColor="#FFF"
                    android:textSize="25sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>