<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3d3d3"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/delightful_header_background" >

        <TextView
            android:id="@+id/control_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name_italic"
            android:textColor="#FFF"
            android:textSize="100sp" />

        <Button
            android:id="@+id/control_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/mensch"
            android:text="@string/main_menu_logout"
            android:textColor="#FFF" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="140dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@id/control_logout_button"
            android:background="@android:color/transparent" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <View
            android:id="@+id/fakeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/leftLayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/control_seekbar_padding_top"
            android:layout_toLeftOf="@+id/centerView"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_apartment_header"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_apartment_subheader"
                android:textSize="18sp"
                android:textStyle="italic" />

            <RelativeLayout
                android:id="@+id/control_layout_background"
                android:layout_width="match_parent"
                android:layout_height="402dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_background_border"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/control_room_layout_background"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/control_room_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/control_seekbar_padding_top" >
                    </ImageView>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutButtonBarLeftStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="@dimen/control_seekbar_padding_top"
                    android:layout_marginRight="@dimen/control_seekbar_padding_top"
                    android:text="@string/control_scenario"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/control_spinner_theme"
                    style="@style/Widget.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/delightful_spinner"
                    android:scrollbars="vertical" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp" >

                    <Button
                        android:id="@+id/control_play_button"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:background="@drawable/play_button"
                        android:gravity="center_vertical" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="@dimen/control_seekbar_padding_top"
            android:layout_toRightOf="@+id/centerView"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_unit_header"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/control_unit_subheader"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                style="@style/DelightfulLinearLayoutSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/layout_background_border" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="POWER"
                    android:textSize="@dimen/text_size_big"
                    android:width="250dp" />

                <SeekBar
                    android:id="@+id/control_seekBar_master"
                    style="@style/DelightfulSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/progress_yellow" />
            </LinearLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background_border"
                android:paddingTop="30dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="RED"
                    android:textSize="@dimen/text_size_big"
                    android:width="250dp" />

                <SeekBar
                    android:id="@+id/control_seekbar_red"
                    style="@style/DelightfulSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="255"
                    android:progress="50"
                    android:progressDrawable="@drawable/progress_red" />
            </LinearLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background_border" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="GREEN"
                    android:textSize="@dimen/text_size_big"
                    android:width="250dp" />

                <SeekBar
                    android:id="@+id/control_seekbar_green"
                    style="@style/DelightfulSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="255"
                    android:progress="50"
                    android:progressDrawable="@drawable/progress_green" />
            </LinearLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutSeekBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background_border" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="BLUE"
                    android:textSize="@dimen/text_size_big"
                    android:width="250dp" />

                <SeekBar
                    android:id="@+id/control_seekbar_blue"
                    style="@style/DelightfulSeekBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="255"
                    android:progress="50"
                    android:progressDrawable="@drawable/progress_blue" />
            </LinearLayout>

            <LinearLayout
                style="@style/DelightfulLinearLayoutButtonBarRightStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/button_scenario"
                    android:layout_width="@dimen/control_button_flow_width"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout1"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/delightful_login_button_oval"
                    android:text="@string/control_flow"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_playlist"
                    android:layout_width="@dimen/control_button_playlist_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/button_scenario"
                    android:background="@drawable/delightful_login_button_oval"
                    android:text="@string/control_playlist"
                    android:textColor="#FFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_eurythmie"
                    android:layout_width="@dimen/control_button_euryth_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/button_playlist"
                    android:background="@drawable/delightful_login_button_oval"
                    android:text="@string/control_euryth"
                    android:textColor="#FFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/centerView"
            android:layout_width="30dp"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>